2008-03-03  Philip Van Hoof <pvanhoof@gnome.org>

	* IMAP provider: bugfix when asking for a list of folders that has no
	subfolders, on Cyrus.

2008-03-12  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-gnome-desktop/tny-gnome-device.c:
	(tny_gnome_device_is_online) if we try to get the network
	state and find that the network manager context is invalid,
	we shutdown it AND after this we nullify the context
	reference.

2008-03-12  Alberto Garcia Gonzalez <agarcia@igalia.com>

	* Reverted the "Leave on disk, MIME parsing" patch, as it's
	causing serious problems.

2008-03-11  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-folder.c:
	Now poke_status only tries to do the job if folder is
	connected/active. Should prevent getting lots of attempts to
	connect in queue that have to be finished later.

2008-03-07  Jose Dapena Paz  <jdapena@igalia.com>

	* tests/c-demo/tny-demoui-summary-view.c:
	Added a simple syntax to provide different parent folders
	in rename/copy operation. Now you can provide
	paths as "/newfolder", "../another-parent/folder", etc.

2008-03-06  Alberto Garcia Gonzalez <agarcia@igalia.com>

	* tinymail/libtinymail-camel/tny-camel-mem-stream.h
	* tinymail/libtinymail-camel/tny-camel-mem-stream.c:
	Added tny_camel_mem_stream_new_with_buffer()

2008-03-06  Philip Van Hoof <pvanhoof@gnome.org>

	* Experimental improvement in locking in the POP3 provider
	* Bugfix when canceling POP summary retrieval

2008-03-06  Alberto Garcia Gonzalez <agarcia@igalia.com>

	* debian/libtinymail-camel-1.0-0.install
	* debian/libtinymail-camel-1.0-0-dev.install:
	Install libcamel-lite

2008-03-05  Philip Van Hoof <pvanhoof@gnome.org>

	* Experimental improvement in locking

2008-03-05  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	(connect_to_server): we don't abort connection attempt if we get
	LOGINDISABLED but we have secure auth methods in capabilities.
